# EhViewer

./: .editorconfig  .gitignore  CHANGELOG.MD  CHANGELOG.zh-CN.MD  README.md  build.gradle.kts  gradle.properties  renovate.json  rust-toolchain.toml  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: baseline-profile.yml  ci.yml  lock-threads.yml  pull_request.yml  releases.yml  update-chrome-version.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/schemas/com.hippo.ehviewer.dao.EhDatabase/: 17.json  20.json  23.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 0001-Disable-runtime-detection-of-NEON-support.patch  0001-Hide-symbols.patch  0002-Fix-zip_time-performance.patch  0002-Insert-link-libs.patch  0003-Fix-incompatibility-with-Nettle-4.x.patch  CMakeLists.txt  archive.c  border.c  build_nettle.sh  configure_nettle.sh  gifutils.c  hash.c  jni.c  nettle.patch
app/src/main/cpp/natsort/: strnatcmp.c
app/src/main/cpp/nettle/: CMakeLists.txt  config.h
app/src/main/java/androidx/navigation/ui/: NavigationUI.kt
app/src/main/java/com/hippo/ehviewer/: EhApplication.kt  Settings.kt
app/src/main/java/tachiyomi/data/release/: GithubWorkflow.kt
app/src/main/kotlin/androidx/compose/foundation/: DragAndDrop.kt
app/src/main/kotlin/com/hippo/files/: Paths.kt  (+1 more)
app/src/main/kotlin/moe/tarsin/: ContextBridges.kt
app/src/main/kotlin/okhttp3/: AsyncDns.kt
app/src/main/kotlin/okhttp3/android/: AndroidAsyncDns.kt
app/src/main/res/layout/: activity_main.xml  dialog_add_filter.xml  reader_activity.xml  reader_general_settings.xml  reader_pager_settings.xml  reader_webtoon_settings.xml  scene_download.xml  scene_favorites.xml  scene_gallery_comments.xml  scene_gallery_list.xml  scene_searchbar.xml  widget_content_layout.xml
app/src/main/res/menu/: context_comment.xml  scene_download.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  attrs.xml  bools.xml  colors.xml  dimens.xml  ids.xml  pathdata.xml  plurals.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: plurals.xml  strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: plurals.xml  strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nb-rNO/: plurals.xml  strings.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw720dp/: dimens.xml
app/src/main/res/values-sw720dp-land/: dimens.xml
app/src/main/res/values-television/: dimens.xml
app/src/main/res/values-th/: plurals.xml  strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v26/: bools.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: backup_scheme.xml  data_extraction_rules.xml  network_security_config.xml
app/src/main/res/xml-v28/: backup_scheme.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/catch_panic_macros/: Cargo.toml
app/src/main/rust/catch_panic_macros/src/: lib.rs
app/src/main/rust/jni_fn/: Cargo.toml
app/src/main/rust/jnix/: Cargo.toml
app/src/main/rust/src/: ffi.rs  img.rs  lib.rs  parser.rs
app/src/main/rust/src/ffi/: android.rs  android_o.rs  jvm.rs
app/src/main/rust/src/hash/: mod.rs  sha1.rs
app/src/main/rust/src/image/: qr_code.rs
app/src/main/rust/src/img/: border.rs  copy_ahb.rs  copy_region.rs  core.rs  qr_code.rs  utils.rs  webp.rs
app/src/main/rust/src/parser/: api.rs  archive.rs  config.rs  detail.rs  fav.rs  home.rs  list.rs  mod.rs  profile.rs  test_parser.rs  torrent.rs  utils.rs
app/src/main/rust/test_data/: archive_url.html  archives_with_funds.html  profile_url.html  vote_tag.json
app/src/marshmallow/res/xml/: network_security_config.xml
benchmark/: build.gradle.kts
build-logic/: gradle.properties  settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationConventionPlugin.kt  MultiplatformLibraryComposeConventionPlugin.kt  MultiplatformLibraryConventionPlugin.kt
chrome-for-testing/: LATEST_RELEASE_STABLE
core/common/: build.gradle.kts
core/common/src/commonMain/composeResources/values/: strings.xml
core/common/src/commonMain/composeResources/values-de/: strings.xml
core/common/src/commonMain/composeResources/values-es/: strings.xml
core/common/src/commonMain/composeResources/values-fr/: strings.xml
core/common/src/commonMain/composeResources/values-ja/: strings.xml
core/common/src/commonMain/composeResources/values-ko/: strings.xml
core/common/src/commonMain/composeResources/values-nb-rNO/: strings.xml
core/common/src/commonMain/composeResources/values-th/: strings.xml
core/common/src/commonMain/composeResources/values-tr/: strings.xml
core/common/src/commonMain/composeResources/values-zh-rCN/: strings.xml
core/common/src/commonMain/composeResources/values-zh-rHK/: strings.xml
core/common/src/commonMain/composeResources/values-zh-rTW/: strings.xml
core/data/: build.gradle.kts
core/data/schemas/com.ehviewer.core.database.EhDatabase/: 18.json  19.json  21.json  22.json
core/i18n/: build.gradle.kts
core/i18n/src/commonMain/moko-resources/base/: strings.xml
core/i18n/src/commonMain/moko-resources/de/: strings.xml
core/i18n/src/commonMain/moko-resources/es/: strings.xml
core/i18n/src/commonMain/moko-resources/fr/: plurals.xml  strings.xml
core/i18n/src/commonMain/moko-resources/ja/: strings.xml
core/i18n/src/commonMain/moko-resources/ko/: plurals.xml  strings.xml
core/i18n/src/commonMain/moko-resources/nb-rNO/: strings.xml
core/i18n/src/commonMain/moko-resources/th/: strings.xml
core/i18n/src/commonMain/moko-resources/zh-rCN/: plurals.xml  strings.xml
core/i18n/src/commonMain/moko-resources/zh-rHK/: plurals.xml  strings.xml
core/i18n/src/commonMain/moko-resources/zh-rTW/: strings.xml
core/ui/: build.gradle.kts
docs/README/: ja-jp.md  ja.md  zh-cn.md  zh-tw.md
gradle/: libs.versions.toml
(+730 files in other folders)
