[package]
name = "ehviewer_rust"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex-lite = "0.1"
jni = "0.21"
jni_fn = "0.1"
quick-xml = { default-features = false, version = "0.36" }
tl = "0.7"
log = "0.4"
android_logger = { default-features = false, version = "0.14" }
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
image = { default-features = false, version = "0.24" }
bardecoder = "0.5"
ndk = { version = "0.9", features = ["bitmap"] }

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
