[package]
name = "ehviewer_rust"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
jvm = ["dep:jni", "dep:jni_fn"]
android = ["dep:ndk", "jvm", "ndk/bitmap"]
android-26 = ["android", "ndk/api-level-26"]

[dependencies]
regex-lite = "0.1"
jni = { version = "0.21", optional = true }
jni_fn = { version = "0.1", optional = true }
quick-xml = { default-features = false, version = "0.37" }
tl = "0.7"
log = "0.4"
android_logger = { default-features = false, version = "0.15" }
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
image = { default-features = false, version = "0.25" }
rxing = { default-features = false, version = "0.7" }
ndk = { version = "0.9", optional = true }

[dev-dependencies]
reqwest = "0.12"
tokio = { version = "1", features = ["macros"] }

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
