[package]
name = "ehviewer_rust"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
jvm = ["dep:jni", "dep:jni_fn"]
android = ["dep:ndk", "jvm", "ndk/bitmap"]
android-26 = ["android", "ndk/api-level-26"]

[dependencies]
regex-lite = "0.1"
jni = { version = "0.21", optional = true }
jni_fn = { version = "0.1", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"] }
quick-xml = { default-features = false, version = "0.37" }
tl = { git = "https://github.com/y21/tl.git", rev = "13ed128e35ce04c4f16c41cb1e38347da3da0b46", features = ["simd"] }
log = "0.4"
android_logger = { default-features = false, version = "0.15" }
serde_cbor = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
image = { default-features = false, version = "0.25" }
rxing = { default-features = false, version = "0.7" }
ndk = { version = "0.9", optional = true }
libwebp-sys2 = { git = "https://github.com/FooIbar/libwebp-sys2-rs.git", features = ["1_5", "demux", "extern-types"] }

[dev-dependencies]
reqwest = "0.12"
tokio = { version = "1", features = ["macros"] }

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
