cmake_minimum_required(VERSION 3.4.1)
project(nettle C)

set(LIBNETTLE_DEFINITIONS
        -DHAVE_CONFIG_H)

set(LIBNETTLE_SOURCES
        ${NETTLE_DIR}/aes-decrypt-internal.c
        ${NETTLE_DIR}/aes-decrypt.c
        ${NETTLE_DIR}/aes-decrypt-table.c
        ${NETTLE_DIR}/aes128-decrypt.c
        ${NETTLE_DIR}/aes192-decrypt.c
        ${NETTLE_DIR}/aes256-decrypt.c
        ${NETTLE_DIR}/aes-encrypt-internal.c
        ${NETTLE_DIR}/aes-encrypt.c
        ${NETTLE_DIR}/aes-encrypt-table.c
        ${NETTLE_DIR}/aes128-encrypt.c
        ${NETTLE_DIR}/aes192-encrypt.c
        ${NETTLE_DIR}/aes256-encrypt.c
        ${NETTLE_DIR}/aes-invert-internal.c
        ${NETTLE_DIR}/aes-set-key-internal.c
        ${NETTLE_DIR}/aes-set-encrypt-key.c
        ${NETTLE_DIR}/aes-set-decrypt-key.c
        ${NETTLE_DIR}/aes128-set-encrypt-key.c
        ${NETTLE_DIR}/aes128-set-decrypt-key.c
        ${NETTLE_DIR}/aes128-meta.c
        ${NETTLE_DIR}/aes192-set-encrypt-key.c
        ${NETTLE_DIR}/aes192-set-decrypt-key.c
        ${NETTLE_DIR}/aes192-meta.c
        ${NETTLE_DIR}/aes256-set-encrypt-key.c
        ${NETTLE_DIR}/aes256-set-decrypt-key.c
        ${NETTLE_DIR}/aes256-meta.c
        ${NETTLE_DIR}/nist-keywrap.c
        ${NETTLE_DIR}/arcfour.c
        ${NETTLE_DIR}/arctwo.c
        ${NETTLE_DIR}/arctwo-meta.c
        ${NETTLE_DIR}/blowfish.c
        ${NETTLE_DIR}/blowfish-bcrypt.c
        ${NETTLE_DIR}/base16-encode.c
        ${NETTLE_DIR}/base16-decode.c
        ${NETTLE_DIR}/base16-meta.c
        ${NETTLE_DIR}/base64-encode.c
        ${NETTLE_DIR}/base64-decode.c
        ${NETTLE_DIR}/base64-meta.c
        ${NETTLE_DIR}/base64url-encode.c
        ${NETTLE_DIR}/base64url-decode.c
        ${NETTLE_DIR}/base64url-meta.c
        ${NETTLE_DIR}/buffer.c
        ${NETTLE_DIR}/buffer-init.c
        ${NETTLE_DIR}/camellia-crypt-internal.c
        ${NETTLE_DIR}/camellia-table.c
        ${NETTLE_DIR}/camellia-absorb.c
        ${NETTLE_DIR}/camellia-invert-key.c
        ${NETTLE_DIR}/camellia128-set-encrypt-key.c
        ${NETTLE_DIR}/camellia128-crypt.c
        ${NETTLE_DIR}/camellia128-set-decrypt-key.c
        ${NETTLE_DIR}/camellia128-meta.c
        ${NETTLE_DIR}/camellia192-meta.c
        ${NETTLE_DIR}/camellia256-set-encrypt-key.c
        ${NETTLE_DIR}/camellia256-crypt.c
        ${NETTLE_DIR}/camellia256-set-decrypt-key.c
        ${NETTLE_DIR}/camellia256-meta.c
        ${NETTLE_DIR}/cast128.c
        ${NETTLE_DIR}/cast128-meta.c
        ${NETTLE_DIR}/cbc.c
        ${NETTLE_DIR}/cbc-aes128-encrypt.c
        ${NETTLE_DIR}/cbc-aes192-encrypt.c
        ${NETTLE_DIR}/cbc-aes256-encrypt.c
        ${NETTLE_DIR}/ccm.c
        ${NETTLE_DIR}/ccm-aes128.c
        ${NETTLE_DIR}/ccm-aes192.c
        ${NETTLE_DIR}/ccm-aes256.c
        ${NETTLE_DIR}/cfb.c
        ${NETTLE_DIR}/siv-cmac.c
        ${NETTLE_DIR}/siv-cmac-aes128.c
        ${NETTLE_DIR}/siv-cmac-aes256.c
        ${NETTLE_DIR}/cnd-memcpy.c
        ${NETTLE_DIR}/chacha-crypt.c
        ${NETTLE_DIR}/chacha-core-internal.c
        ${NETTLE_DIR}/chacha-poly1305.c
        ${NETTLE_DIR}/chacha-poly1305-meta.c
        ${NETTLE_DIR}/chacha-set-key.c
        ${NETTLE_DIR}/chacha-set-nonce.c
        ${NETTLE_DIR}/ctr.c
        ${NETTLE_DIR}/ctr16.c
        ${NETTLE_DIR}/des.c
        ${NETTLE_DIR}/des3.c
        ${NETTLE_DIR}/eax.c
        ${NETTLE_DIR}/eax-aes128.c
        ${NETTLE_DIR}/eax-aes128-meta.c
        ${NETTLE_DIR}/ghash-set-key.c
        ${NETTLE_DIR}/ghash-update.c
        ${NETTLE_DIR}/gcm.c
        ${NETTLE_DIR}/gcm-aes.c
        ${NETTLE_DIR}/gcm-aes128.c
        ${NETTLE_DIR}/gcm-aes128-meta.c
        ${NETTLE_DIR}/gcm-aes192.c
        ${NETTLE_DIR}/gcm-aes192-meta.c
        ${NETTLE_DIR}/gcm-aes256.c
        ${NETTLE_DIR}/gcm-aes256-meta.c
        ${NETTLE_DIR}/gcm-camellia128.c
        ${NETTLE_DIR}/gcm-camellia128-meta.c
        ${NETTLE_DIR}/gcm-camellia256.c
        ${NETTLE_DIR}/gcm-camellia256-meta.c
        ${NETTLE_DIR}/cmac.c
        ${NETTLE_DIR}/cmac64.c
        ${NETTLE_DIR}/cmac-aes128.c
        ${NETTLE_DIR}/cmac-aes256.c
        ${NETTLE_DIR}/cmac-des3.c
        ${NETTLE_DIR}/cmac-aes128-meta.c
        ${NETTLE_DIR}/cmac-aes256-meta.c
        ${NETTLE_DIR}/cmac-des3-meta.c
        ${NETTLE_DIR}/gost28147.c
        ${NETTLE_DIR}/gosthash94.c
        ${NETTLE_DIR}/gosthash94-meta.c
        ${NETTLE_DIR}/hmac.c
        ${NETTLE_DIR}/hmac-gosthash94.c
        ${NETTLE_DIR}/hmac-md5.c
        ${NETTLE_DIR}/hmac-ripemd160.c
        ${NETTLE_DIR}/hmac-sha1.c
        ${NETTLE_DIR}/hmac-sha224.c
        ${NETTLE_DIR}/hmac-sha256.c
        ${NETTLE_DIR}/hmac-sha384.c
        ${NETTLE_DIR}/hmac-sha512.c
        ${NETTLE_DIR}/hmac-streebog.c
        ${NETTLE_DIR}/hmac-sm3.c
        ${NETTLE_DIR}/hmac-md5-meta.c
        ${NETTLE_DIR}/hmac-ripemd160-meta.c
        ${NETTLE_DIR}/hmac-sha1-meta.c
        ${NETTLE_DIR}/hmac-sha224-meta.c
        ${NETTLE_DIR}/hmac-sha256-meta.c
        ${NETTLE_DIR}/hmac-sha384-meta.c
        ${NETTLE_DIR}/hmac-sha512-meta.c
        ${NETTLE_DIR}/hmac-streebog-meta.c
        ${NETTLE_DIR}/hmac-sm3-meta.c
        ${NETTLE_DIR}/knuth-lfib.c
        ${NETTLE_DIR}/hkdf.c
        ${NETTLE_DIR}/md2.c
        ${NETTLE_DIR}/md2-meta.c
        ${NETTLE_DIR}/md4.c
        ${NETTLE_DIR}/md4-meta.c
        ${NETTLE_DIR}/md5.c
        ${NETTLE_DIR}/md5-compress.c
        ${NETTLE_DIR}/md5-compat.c
        ${NETTLE_DIR}/md5-meta.c
        ${NETTLE_DIR}/memeql-sec.c
        ${NETTLE_DIR}/memxor.c
        ${NETTLE_DIR}/memxor3.c
        ${NETTLE_DIR}/nettle-lookup-hash.c
        ${NETTLE_DIR}/nettle-meta-aeads.c
        ${NETTLE_DIR}/nettle-meta-armors.c
        ${NETTLE_DIR}/nettle-meta-ciphers.c
        ${NETTLE_DIR}/nettle-meta-hashes.c
        ${NETTLE_DIR}/nettle-meta-macs.c
        ${NETTLE_DIR}/pbkdf2.c
        ${NETTLE_DIR}/pbkdf2-hmac-gosthash94.c
        ${NETTLE_DIR}/pbkdf2-hmac-sha1.c
        ${NETTLE_DIR}/pbkdf2-hmac-sha256.c
        ${NETTLE_DIR}/pbkdf2-hmac-sha384.c
        ${NETTLE_DIR}/pbkdf2-hmac-sha512.c
        ${NETTLE_DIR}/poly1305-aes.c
        ${NETTLE_DIR}/poly1305-internal.c
        ${NETTLE_DIR}/realloc.c
        ${NETTLE_DIR}/ripemd160.c
        ${NETTLE_DIR}/ripemd160-compress.c
        ${NETTLE_DIR}/ripemd160-meta.c
        ${NETTLE_DIR}/salsa20-core-internal.c
        ${NETTLE_DIR}/salsa20-crypt-internal.c
        ${NETTLE_DIR}/salsa20-crypt.c
        ${NETTLE_DIR}/salsa20r12-crypt.c
        ${NETTLE_DIR}/salsa20-set-key.c
        ${NETTLE_DIR}/salsa20-set-nonce.c
        ${NETTLE_DIR}/salsa20-128-set-key.c
        ${NETTLE_DIR}/salsa20-256-set-key.c
        ${NETTLE_DIR}/sha1.c
        ${NETTLE_DIR}/sha1-compress.c
        ${NETTLE_DIR}/sha1-meta.c
        ${NETTLE_DIR}/sha256.c
        ${NETTLE_DIR}/sha256-compress-n.c
        ${NETTLE_DIR}/sha224-meta.c
        ${NETTLE_DIR}/sha256-meta.c
        ${NETTLE_DIR}/sha512.c
        ${NETTLE_DIR}/sha512-compress.c
        ${NETTLE_DIR}/sha384-meta.c
        ${NETTLE_DIR}/sha512-meta.c
        ${NETTLE_DIR}/sha512-224-meta.c
        ${NETTLE_DIR}/sha512-256-meta.c
        ${NETTLE_DIR}/sha3.c
        ${NETTLE_DIR}/sha3-permute.c
        ${NETTLE_DIR}/sha3-224.c
        ${NETTLE_DIR}/sha3-224-meta.c
        ${NETTLE_DIR}/sha3-256.c
        ${NETTLE_DIR}/sha3-256-meta.c
        ${NETTLE_DIR}/sha3-384.c
        ${NETTLE_DIR}/sha3-384-meta.c
        ${NETTLE_DIR}/sha3-512.c
        ${NETTLE_DIR}/sha3-512-meta.c
        ${NETTLE_DIR}/shake256.c
        ${NETTLE_DIR}/sm3.c
        ${NETTLE_DIR}/sm3-meta.c
        ${NETTLE_DIR}/serpent-set-key.c
        ${NETTLE_DIR}/serpent-encrypt.c
        ${NETTLE_DIR}/serpent-decrypt.c
        ${NETTLE_DIR}/serpent-meta.c
        ${NETTLE_DIR}/streebog.c
        ${NETTLE_DIR}/streebog-meta.c
        ${NETTLE_DIR}/twofish.c
        ${NETTLE_DIR}/twofish-meta.c
        ${NETTLE_DIR}/umac-nh.c
        ${NETTLE_DIR}/umac-nh-n.c
        ${NETTLE_DIR}/umac-l2.c
        ${NETTLE_DIR}/umac-l3.c
        ${NETTLE_DIR}/umac-poly64.c
        ${NETTLE_DIR}/umac-poly128.c
        ${NETTLE_DIR}/umac-set-key.c
        ${NETTLE_DIR}/umac32.c
        ${NETTLE_DIR}/umac64.c
        ${NETTLE_DIR}/umac96.c
        ${NETTLE_DIR}/umac128.c
        ${NETTLE_DIR}/version.c
        ${NETTLE_DIR}/write-be32.c
        ${NETTLE_DIR}/write-le32.c
        ${NETTLE_DIR}/write-le64.c
        ${NETTLE_DIR}/yarrow256.c
        ${NETTLE_DIR}/yarrow_key_event.c
        ${NETTLE_DIR}/xts.c
        ${NETTLE_DIR}/xts-aes128.c
        ${NETTLE_DIR}/xts-aes256.c
        )

set(LIBNETTLE_INCLUDES
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${NETTLE_DIR}
        )

add_library(nettle STATIC ${LIBNETTLE_SOURCES})
target_include_directories(nettle PUBLIC ${LIBNETTLE_INCLUDES})
target_compile_definitions(nettle PRIVATE ${LIBNETTLE_DEFINITIONS})